--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="es">
     <head>
         <script type="text/javascript">
-           // var host = "panchovillalasgrutas.com.ar";
+            var host = "carnehierroycarbon.com.ar";
             if((host == window.location.host) && (window.location.protocol != "https:"))
                 window.location.protocol = "https"
         </script>
         <meta charset="utf-8" />
-        <!--
-            <link rel="canonical" href="https://panchovillalasgrutas.com.ar" />
-        -->
+        <link rel="canonical" href="https://carnehierroycarbon.com.ar" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
